# ai-diagram-service

./: .gitignore  Dockerfile  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements_simple.txt  run.py  web_application_architecture
app/: __init__.py  config.py  main.py  main_simple.py  models.py
app/services/: __init__.py  agent_service.py  agent_service_simple.py  llm_service.py
app/tools/: __init__.py  diagram_tools.py
tests/: __init__.py  test_services.py
web/: index.html  simple_index.html
